--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vagrant
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -10,6 +12,7 @@ _test
 # Architecture specific extensions/prefixes
 *.[568vq]
 [568vq].out
+
 
 *.cgo1.go
 *.cgo2.c
